// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component converter oboToSlate converts OboNode to a Slate node 1`] = `
Object {
  "type": "mockOboNode",
}
`;

exports[`Component converter oboToSlate converts OboNode to a Slate node 2`] = `undefined`;

exports[`Component converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "type": "mockSlateNode",
}
`;
